# word-definer

./: .gitignore  Dockerfile  Makefile  README.md  dictionary.py  main.py  pyproject.toml  requirements.txt  routes.py  text_extractor.py
frontend/: index.deploy.html  index.html  style.css
infrastructure/: main.tf  outputs.tf  variables.tf
src/: dictionary.py  main.py  text_extractor.py
tests/: test_text_extractor.py
